# fastlife

./: .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst  requirements.txt
docs/api/: exceptions.rst  grid.rst  index.rst  sequential.rst  utils.rst
docs/notes/: index.rst  neighborhoods.rst
fastlife/: __init__.py  __main__.py  exceptions.py  grid.py  sequential.py  utils.py  version.py
tests/: __init__.py  requirements.txt  test_grid.py
