[metadata]
description-file = README.md
license_file = LICENSE

[aliases]
test=pytest

[tool:pytest]
addopts = --cov=fastlife --flakes
python_files = tests/*
flakes-ignore =
    __init__.py UnusedImport
    __init__.py ImportStarUsed
    test_*.py ImportStarUsed
    test_*.py ImportStarUsage
    conftest.py UnusedVariable
    examples/* ALL
    tests/checks.py ALL
    docs/_build ALL
filterwarnings =
    once::UserWarning
    once::DeprecationWarning
    once::PendingDeprecationWarning
    ignore::FutureWarning

[flake8]
# match black maximum line length
max-line-length = 88
per-file-ignores =
    __init__.py:F401
    test_*.py:F405,F403
    conftest.py:F841